# pywordle

./: pyproject.toml
pywordle/: cli.py  main.py
pywordle/gui/: constants.py  event_manager.py  game_state.py  main.py  renderer.py
pywordle/models/: board.py  game.py  guess.py  letter.py
pywordle/tests/: __init__.py  test_board.py  test_cli.py  test_game.py  test_guess.py  test_letter.py
tests/: test_board.py  test_cli.py  test_game.py  test_guess.py  test_gui.py  test_letter.py
