[tool.poetry]
name = "pywordle"
version = "0.1.0"
description = "A simple wordle game using pygame as the engine"
authors = ["Lok Chan <0903lokchan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame-ce = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
testpaths = ["pywordle/tests"]
pythonpath = ["pywordle"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
